# admm-box-qp

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
apps/: benchmark_solvers.cpp  export_scenarios.cpp
configs/: planner_config.json  scenarios.json  solver_config.json
include/admm/: admm_solver.h  lateral_planner.h  osqp_solver.h  riccati_solver.h  types.h
scripts/: plot_results.py
src/: admm_solver.cpp  lateral_planner.cpp  osqp_solver.cpp  riccati_solver.cpp
tests/: test_admm.cpp  test_lateral_planner.cpp
